syntax = "proto3";

option go_package = "./project";
package project;

service ProjectService {
  rpc GenerateProject (ProjectRequest) returns (ProjectResponse) {}
}

message ProjectRequest {
  string yaml = 1;
  string user = 2;
  string name = 3;
  string repository = 4;
}

message ProjectResponse{
  string name = 1;
  bytes fileChunk = 2;
}